--- a/src/app/posts/post-details/post-details.component.html
+++ b/src/app/posts/post-details/post-details.component.html
@@ -4,7 +4,7 @@
   <mat-grid-list
   cols="2" rowHeight="2:2" gutterSize="1"
   >
-    <mat-grid-tile>
+    <mat-grid-tile rowspan="2">
         <img 
         class="tile-image"
         src= {{post.image}}>
